fix: overflow hero

--- a/style.css
+++ b/style.css
@@ -1422,7 +1422,7 @@ footer {
 }
 
 .test * {
-  outline: 1px solid #777;
+  border: 1px solid #777;
 }
 
 .hero {
@@ -1534,7 +1534,6 @@ html[lang='nl'] .dark .hero {
   font-size: 32px;
   text-transform: uppercase;
   transition: 0.3s all;
-
 }
 
 @media (max-width: 500px) {
@@ -1776,6 +1775,7 @@ html[lang='nl'] .dark .hero {
 .list {
   list-style-image: url(icons/next.svg);
   margin-left: 20px;
+  max-width: 95%;
 }
 
 .dark .list {
@@ -1963,7 +1963,7 @@ html[lang='nl'] .dark .hero {
   padding-right: calc(var(--padding) * 2);
   display: flex;
   flex-direction: column;
- justify-content: center;
+  justify-content: center;
 }
 
 .floor .section__content {
@@ -2231,10 +2231,10 @@ html[lang='nl'] .dark .hero {
   display: flex;
   flex-direction: column;
   width: 28%;
-  min-width: 300px;
+  min-width: 280px;
   max-width: 400px;
   height: 274px;
-  margin: 20px;
+  margin: 16px;
   transition: .4s transform, .6s background;
   border: 2px solid var(--base-shadow);
   border-radius: 6px;
